--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:8889/spring_web_blog
-spring.datasource.url=${JDBC_URL:jdbc:mysql://localhost:8889/spring_web_blog}
-spring.datasource.username=root
-spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=${jdbc:postgresql://localhost:5432/web-education}
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
+spring.datasource.driver-class-name=com.postgresql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
