--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.education</groupId>
     <artifactId>project-team</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>project-team</name>
+    <name>Education-Web</name>
     <description>project-team</description>
     <properties>
         <java.version>17</java.version>
@@ -37,10 +37,6 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
