--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=${jdbc:postgresql://localhost:5432/web-education}
+spring.datasource.url=${JDBC_URL:jdbc:postgresql://localhost:5432/web-education}
+#spring.datasource.url=${JDBC_URL:jdbc:mysql://localhost:8889/spring_web_blog}
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
 spring.datasource.driver-class-name=org.postgresql.Driver
